** Web interface
- GWL source snippets now have better syntax highlighting.
** Bug fixes
- handle caching of files with UTF-8 encoded file names
- handle more errors in the web interface
** Error handling
- accidental keywords instead of =process= or =workflow= field names now trigger a more specific “invalid field” syntax error instead of generating invalid syntax that throws an unclear error later.

* Changes in 0.2.1 (since 0.2.0)
** Documentation
- additional documentation of the “run-time” field and the “complexity” type
- added example of how to use =pick= with local variable definitions
** Bug fixes
- due to a faulty condition (a test whether a file is a directory),
  process outputs were never cached.  The condition has been
  corrected.
- outputs with absolute file names are no longer considered missing
- workflows without inputs no longer trigger an error
* Changes in 0.2.0 (since 0.1.1)
** Command line interface
  * Remove the “guix process” command.
  * Remove GUIX_WORKFLOW_PATH; load workflows from files instead.
  * Add --container flag to enable process isolation
** Workflow syntax
  * Support Wisp syntax in workflow files.
  * Add syntactic sugar for defining workflows and processes.
  * Support syntax for procedures written in languages other than Guile.
  * Add graph syntax to specify process dependencies.
  * Add “auto-connect” helper to automatically link up process inputs and outputs.
  * Deprecate the “restrictions” field in workflow records in favor of “auto-connect” and “graph” syntax in the “processes” field.
  * Fields of the “process” form that expect lists now also accept multiple values.
  * Add “on” procedure for application of higher-order functions to collections
  * Add “expand” procedure to expand variables in file name templates
** Execution engines
  * Add simple execution engine and use it by default instead of the bash-engine.
** Programming interface